# agentb

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REPORT.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  run_benchmark.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task-submission.md
.github/workflows/: benchmark.yml
agents/: __init__.py  base.py
agents/browser_use/: __init__.py  browser_use_agent.py
agents/openai_cua/: __init__.py  openai_cua_agent.py
agents/openrouter/: __init__.py  openrouter_agent.py
agents/stub/: __init__.py  stub_agent.py
docs/: LOCAL_INFERENCE.md  PLANNED_AGENTS.md  REPORT_OUTLINE.md  ROADMAP.md  index.html
evaluators/: __init__.py  evaluator.py
evaluators/checks/: __init__.py  critical_actions.py  final_answer.py  step_match.py
examples/: README.md  quickstart.py
leaderboard/: LEADERBOARD.md  generate.py
scripts/: analyze_results.py  finalize_tasks.py  snapshot_task.py  validate_tasks.py
tasks/: __init__.py  all_tasks.json  schema.json
tasks/developer/: crash-interpretation.json  docker-hub-pull.json  find-bug-in-snippet.json  git-clone-instructions.json  github-trending-python.json  good-first-issue-transcription-repo.json  kubernetes-get-pods.json  npm-package-readme.json  open-source-license.json  pypi-package-latest.json  regex-email.json  rest-api-design.json  (+3 more)
tests/: test_agents.py  test_evaluator.py  test_run_benchmark.py
(+47 files in other folders)
